# electra

./: BUILD.md  LICENSE.md  README.md  electra.pro  meson.build
electra/: electra.pro  main.cpp  meson.build
electractl/: electractl.pro  main.cpp  meson.build
protocol/: electra_protocol.json  electraabstractserver.h  electraclient.h  electraserver.cpp  electraserver.h  meson.build  protocol.pro
